--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,6 +1,10 @@
 // Ionic Variables and Theming. For more info, please see:
 // http://ionicframework.com/docs/theming/
 
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Raleway:wght@300;400;700&display=swap');
+$font-family-base: 'Montserrat';
+
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
