carga statica slider

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,11 +1,19 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+
     <ion-title>
-      VULTHANOS
+      Menu
     </ion-title>
+
+</ion-header>
+
+<ion-header collapse="condense">
+  <ion-toolbar>
+    <ion-title size="large">Menu</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content [fullscreen]="true">
-  <ion-button routerLink="/products">Productos</ion-button>
+  <ion-button routerLink='/productos'></ion-button>
+
 </ion-content>
