--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -4,12 +4,12 @@
 
 <ion-header>
   <ion-toolbar>
-    <ion-title>Productos</ion-title>
+    <ion-title>productos</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <h3 class="titulo-apartado">Productos Top</h3>
+<ion-content>
+
 
   <section class="slider-principal">
     <button aria-label="Atras" class="slider_nav slider_back"><i class="fa-solid fa-circle-chevron-left" id="btn_back"></i></button>
@@ -44,12 +44,6 @@
 
     <div role="tablist" class="slider_idicators"></div>
 
-
   </section>
-
-  <section class="muestreoProductos">
-
-  </section>
-
 
 </ion-content>
