--- a/src/app/pages/productos/productos.page.scss
+++ b/src/app/pages/productos/productos.page.scss
@@ -1,73 +1,29 @@
-.slider {
-  justify-content: center;
-  align-items: center;
-}
 
-.slider_list {
-  max-width: 100%;
-  overflow: hidden;
-  max-height:  50em;
-}
 
-.slider_container {
+ion-card{
   width: 100%;
-  position: relative;
-  left: 7.5em;
+  height: 160px;
+  box-shadow: none;
+  border-radius: 12px;
+
+  img{
+    object-fit: cover;
+    width: 100%;
+    transform: scale(1.1, 1.1)rotate(1deg);
+    transition: 600ms all ease-in-out;
+  }
 }
 
-.slider_element {
-  text-align: center;
-  margin-top: 10em;
-  max-width: 100%;
-  max-height: 46.125em;
+.swiper-slide-active{
+  transform: scale(1.05, 1.05);
+
+  ion-card{
+    img{
+      transform: scale(1, 1);
+    }
+  }
 }
 
-.slider_back, .slider_next {
-  position: absolute;
-  display: block;
-  width: fit-content;
-  height: fit-content;
-  border: none;
-  top: calc(100% + 1em);
-  cursor: pointer;
-  line-height: 1.875em;
-  text-align: center;
-  background: none;
-  color: #000000;
-  transition: .3s ease all;
-  opacity: 1;
-}
-
-.slider_back {
-  right: 20em;
-}
-.slider_next {
-  right: 16.5em;
-}
-
-.slider_idicators {
-  margin-top: 1em;
-  max-width: 93%;
-  position: absolute;
-  left: 18em;
-}
-
-.fa-circle-chevron-right, .fa-circle-chevron-left {
-  font-size: 2.006875em;
-}
-
-.slider_idicators .glider-dot {
-  display: block;
-  width: 2.006875em;
-  height: 2.006875em;
-  background: #FF833D;
-  transition: .3s ease all;
-  opacity: 1;
-}
-
-.slider_idicators .glider-dot.active {
-  width: 2.92625em;
-  height: 2.92625em;
-  background: #E34F21;
-  opacity: 1;
+.swiper-slide{
+  transition: 400ms all ease-in-out;
 }
