slider con carga dinamica y estilado

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -14,6 +14,6 @@
 
 
 <ion-content [fullscreen]="true">
-  <ion-button routerLink='/productos'></ion-button>
+  <ion-button routerLink='/productos'>Productos</ion-button>
 
 </ion-content>
