--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -1,7 +1,3 @@
-<link rel="stylesheet" type="text/css" href="/assets/CSS_Files/slider.css">
-<link rel="stylesheet" type="text/css" href="/assets/CSS_Files/normalize-8.0.1.css">
-<link rel="stylesheet" type="text/css" href="/assets/CSS_Files/glider-1.7.7.css">
-
 <ion-header>
   <ion-toolbar>
     <ion-title>productos</ion-title>
@@ -10,18 +6,18 @@
 
 <ion-content [fullscreen]="true">
   <section class="slider-principal">
-    <button aria-label="Atras" class="slider_nav slider_back"><i class="fa-solid fa-circle-chevron-left" id="btn_back"></i></button>
 
-    <ion-slides [options]="option" class="ion-margin-top">
-
+    <ion-slides #carrusel [options]="option" class="ion-margin-top">
       <ion-slide *ngFor="let item of products | async">
-          <ion-thumbnail slot="start">
+        <ion-card>
             <ion-img class="img" src='{{item.img}}' alt=""></ion-img>
-          </ion-thumbnail>
+        </ion-card>
       </ion-slide>
     </ion-slides>
 
-    <button aria-label="Adelante" class="slider_nav slider_next"><i class="fa-solid fa-circle-chevron-right" id="btn_next"></i></button>
+      <ion-button (click)="anterior()" aria-label="Atras" class="slider_nav slider_back"><i class="fa-solid fa-circle-chevron-left" id="btn_back"></i></ion-button>
+      <ion-button (click)="siguiente()"  aria-label="Adelante" class="slider_nav slider_next"><i class="fa-solid fa-circle-chevron-right" id="btn_next"></i></ion-button>
+
 
     <div role="tablist" class="slider_idicators"></div>
 
