--- a/src/app/pages/productos/productos.page.scss
+++ b/src/app/pages/productos/productos.page.scss
@@ -1,8 +1,6 @@
-
-
 ion-card{
   width: 100%;
-  height: 160px;
+  height: 210px;
   box-shadow: none;
   border-radius: 12px;
 
@@ -26,4 +24,8 @@ ion-card{
 
 .swiper-slide{
   transition: 400ms all ease-in-out;
+}
+
+button{
+  align-items: center;
 }
