--- a/src/app/pages/productos/productos.page.scss
+++ b/src/app/pages/productos/productos.page.scss
@@ -1,6 +1,6 @@
 ion-card{
   width: 100%;
-  height: 210px;
+  height: 120px;
   box-shadow: none;
   border-radius: 12px;
 
@@ -28,4 +28,20 @@ ion-card{
 
 button{
   align-items: center;
+}
+
+.tarjeta{
+  width: 100%;
+  height: 210px;
+  box-shadow: none;
+  border-radius: 12px;
+  margin-bottom: 4em;
+
+  img{
+    object-fit: cover;
+    width: 100%;
+    transform: scale(1.1, 1.1)rotate(1deg);
+    transition: 600ms all ease-in-out;
+
+  }
 }
