--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -4,30 +4,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <form #initio>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Correo</ion-label>
-          <ion-input type="email" required name="correo" ngModel></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Contraseña</ion-label>
-          <ion-input type="password" required name="clave" ngModel></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+<ion-content class="ion-padding">
+  <form [formGroup]="credentials" (ngSubmit)="login()">
 
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" shape="round" (click)="iniciarSesion(initio)">INICIAR SESION</ion-button>
-        <ion-label>¿No tienes cuenta? <a routerLink="/registro">Registrate</a></ion-label>
-      </ion-col>
-    </ion-row>
+    <ion-item>
+      <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
+      <ion-note slot="error" *ngIf="(email.dirty || email.touched) && email.errors">El email es incorrecto</ion-note>
+    </ion-item>
+
+    <ion-item>
+      <ion-input type="password" placeholder="Contraseña" formControlName="password"></ion-input>
+      <ion-note slot="error" *ngIf="(password.dirty || password.touched) && password.errors">La contraseña es incorrecta</ion-note>
+    </ion-item>
+
+    <ion-button type="submit" expand="block" shape="round" [disabled]="!credentials.valid">INICIAR SESION</ion-button>
+    <ion-label>¿No tienes cuenta? <a routerLink="/registro">Registrate</a></ion-label>
   </form>
 </ion-content>
