--- a/src/app/pages/singup/singup.page.html
+++ b/src/app/pages/singup/singup.page.html
@@ -5,29 +5,20 @@
 </ion-header>
 
 <ion-content>
-  <form #registro>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Correo</ion-label>
-          <ion-input type="email" required name="correo" ngModel></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col>
-        <ion-item>
-          <ion-label>Contraseña</ion-label>
-          <ion-input type="password" required name="clave" ngModel></ion-input>
-        </ion-item>
-      </ion-col>
-    </ion-row>
+  <form [formGroup]="credentials">
 
-    <ion-row>
-      <ion-col>
-        <ion-button expand="block" shape="round" (click)="registrarUsuario(registro)">REGISTRARSE</ion-button>
-        <ion-label>¿Ya tienes cuenta? <a routerLink="/">Inicia Sesión</a></ion-label>
-      </ion-col>
-    </ion-row>
+    <ion-item>
+      <ion-input type="email" placeholder="Email" formControlName="email"></ion-input>
+      <ion-note slot="error" *ngIf="(email.dirty || email.touched) && email.errors">El email es incorrecto</ion-note>
+    </ion-item>
+
+    <ion-item>
+      <ion-input type="password" placeholder="Contraseña" formControlName="password"></ion-input>
+      <ion-note slot="error" *ngIf="(password.dirty || password.touched) && password.errors">La contraseña es incorrecta</ion-note>
+    </ion-item>
+
+    <ion-button type="submit" expand="block" shape="round" (click)="register()">REGISTRARSE</ion-button>
+    <ion-label>¿Ya tienes cuenta? <a routerLink="/">Inicia sesión</a></ion-label>
+
   </form>
 </ion-content>
