routing productos con detalles. Falta mostrarlos

--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -1,7 +1,6 @@
-
 <ion-header>
   <ion-toolbar>
-    <ion-title>product-details</ion-title>
+    <ion-title>Detalles del producto</ion-title>
   </ion-toolbar>
 </ion-header>
 
