--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -8,7 +8,7 @@
   <section class="slider-principal">
     <ion-slides #carrusel [options]="option" class="ion-margin-top">
       <ion-slide *ngFor="let item of products | async">
-        <ion-card>
+        <ion-card routerLink="/product-details">
             <ion-img class="img" src='{{item.img}}' alt=""></ion-img>
         </ion-card>
       </ion-slide>
@@ -23,14 +23,9 @@
   <section class="muestreoProductos">
     <br><ion-label class="tituloApartado">Productos destacados</ion-label>
     <ion-list>
-      <ion-item *ngFor="let item of productsList | async">
-        <ion-card class="tarjeta">
-          <ion-img class="img" src='{{item.img}}' alt=""></ion-img>
-          <ion-label>{{item.name}}</ion-label>
-          <ion-label>{{item.description}}</ion-label>
-          <ion-label>{{item.price}}</ion-label>
-        </ion-card>
-      </ion-item>
+        <ion-item  *ngFor="let item of productsList | async">
+          <ion-card class="tarjeta" routerLink="/product-details"><ion-img class="img" src='{{item.img}}' alt="" ></ion-img></ion-card>
+        </ion-item>
     </ion-list>
   </section>
 
