--- a/src/app/pages/singup/singup.page.html
+++ b/src/app/pages/singup/singup.page.html
@@ -4,7 +4,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content class="singup-content">
   <form [formGroup]="credentials">
 
     <ion-item>
