--- a/src/global.scss
+++ b/src/global.scss
@@ -26,9 +26,10 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 ion-button {
-  background-color: #FFA16D;
+  font-weight: bold;
 }
 
 a {
   color: #FF833D;
+  font-weight: bold;
 }
