--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -101,7 +101,7 @@ $font-family-base: 'Montserrat';
     --ion-color-secondary-shade: #46b0e0;
     --ion-color-secondary-tint: #62ceff;
 
-    --ion-color-tertiary: #6a64ff;
+    --ion-color-tertiary: #FFA16D;
     --ion-color-tertiary-rgb: 106,100,255;
     --ion-color-tertiary-contrast: #ffffff;
     --ion-color-tertiary-contrast-rgb: 255,255,255;
