--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,25 +1,55 @@
 ion-avatar {
-  width: 8em;
-  height: 8em;
+  width: 6em;
+  height: 6em;
+}
+
+ion-item {
+  background: none;
+}
+
+.profileInput {
+  background-color: #CEB7E5;
+  border: none;
+  border-radius: 1em;
+  text-align: center;
+  color: #000000;
+  margin-top: 1.5em;
+  height: 55%;
+  width: 100%;
+}
+
+.cBtn {
+  margin-top: 1em;
+}
+
+.logoutIcon {
+  position: absolute;
+  right: 0;
+  top: 0.5em;
+}
+
+.profileDetails {
+  display: block;
+  margin-top: 1em;
 }
 
 .avatar {
-  width: 6em;
-  height: 6em;
-  display: flex;
+  width: 4em;
+  height: 4em;
+  display: block;
   justify-content: center;
   color: #000000;
 }
 
 .preview {
-  margin-top: 3.125em;
-  display: flex;
+  margin-top: 1em;
+  display: block;
   justify-content: center;
 }
 
 .fallback {
-  width: 8em;
-  height: 8em;
+  width: 6em;
+  height: 6em;
   border-radius: 50%;
   background: #bfbfbf;
   display: flex;
