Añadido header a todas las páginas necesarias con acceso al perfil y a la página home

--- a/src/app/pages/singup/singup.page.html
+++ b/src/app/pages/singup/singup.page.html
@@ -28,7 +28,7 @@
     </ion-item>
 
     <ion-button type="submit" expand="block" shape="round" color="tertiary" (click)="register()">REGISTRARSE</ion-button>
-    <ion-label>¿Ya tienes cuenta? <a routerLink="/">Inicia sesión</a></ion-label>
+    <ion-label>¿Ya tienes cuenta? <a routerLink="/initio">Inicia sesión</a></ion-label>
 
   </form>
 </ion-content>
