--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,15 +1,11 @@
 
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tu perfil
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-header collapse="condense">
-  <ion-toolbar>
-    <ion-title size="large">Tu perfil</ion-title>
+    <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
+    <ion-title>Tu perfil</ion-title>
+    <div class="fallback">
+      <ion-icon slot="icon-only" name="person-outline" class="avatar" routerLink="/profile"></ion-icon>
+    </div>
   </ion-toolbar>
 </ion-header>
 
@@ -23,8 +19,8 @@
     <ion-avatar (click)="changeImage()">
       <img *ngIf="profile?.imageUrl; else placeholder_avatar;" [src]="profile.imageUrl" alt=""/>
       <ng-template #placeholder_avatar>
-        <div class="fallback">
-          <ion-icon slot="icon-only" name="person-outline" class="avatar"></ion-icon>
+        <div class="pfallback">
+          <ion-icon slot="icon-only" name="person-outline" class="pavatar"></ion-icon>
         </div>
       </ng-template>
     </ion-avatar>
