--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,3 +1,26 @@
+.icon {
+  top: 0;
+  position: absolute;
+  left: 0;
+  width: 3em;
+  height: 3em;
+}
+
+ion-title {
+  margin-left: 2em;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar{
+  top: 0;
+  position: absolute;
+  right: 0;
+  width: 3em;
+  height: 3em;
+}
+
+
 ion-avatar {
   width: 6em;
   height: 6em;
@@ -33,7 +56,7 @@ ion-item {
   margin-top: 1em;
 }
 
-.avatar {
+.pavatar {
   width: 4em;
   height: 4em;
   display: block;
@@ -47,7 +70,7 @@ ion-item {
   justify-content: center;
 }
 
-.fallback {
+.pfallback {
   width: 6em;
   height: 6em;
   border-radius: 50%;
