Cambiado color de botones en el slider

--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -18,8 +18,8 @@
       </ion-slide>
     </ion-slides>
 
-      <ion-button (click)="anterior()" aria-label="Atras" class="slider_nav slider_back"><i class="fa-solid fa-circle-chevron-left" id="btn_back"></i></ion-button>
-      <ion-button (click)="siguiente()"  aria-label="Adelante" class="slider_nav slider_next"><i class="fa-solid fa-circle-chevron-right" id="btn_next"></i></ion-button>
+      <ion-button color="tertiary" (click)="anterior()" aria-label="Atras" class="slider_nav slider_back"><i class="fa-solid fa-circle-chevron-left" id="btn_back"></i></ion-button>
+      <ion-button color="tertiary" (click)="siguiente()"  aria-label="Adelante" class="slider_nav slider_next"><i class="fa-solid fa-circle-chevron-right" id="btn_next"></i></ion-button>
 
     <div role="tablist" class="slider_idicators"></div>
   </section>
