Añadido header a página de inicio de sesión y registro

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -21,3 +21,27 @@ ion-button:hover {
   justify-self: center;
   top: 15%;
 }
+
+.icon {
+  top: 0;
+  position: absolute;
+  left: 0;
+  width: 3em;
+  height: 3em;
+}
+
+ion-title {
+  position: absolute;
+  left: 15%;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar{
+  top: 0;
+  position: absolute;
+  right: 0;
+  width: 3em;
+  height: 3em;
+}
