--- a/src/app/pages/singup/singup.page.html
+++ b/src/app/pages/singup/singup.page.html
@@ -1,8 +1,13 @@
 <ion-header>
   <ion-toolbar>
+    <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
     <ion-title>Registrate</ion-title>
+    <div class="fallback">
+      <ion-icon slot="icon-only" name="person-outline" class="avatar" routerLink="/profile"></ion-icon>
+    </div>
   </ion-toolbar>
 </ion-header>
+
 
 <ion-content class="singup-content">
   <form [formGroup]="credentials">
