--- a/src/app/pages/singup/singup.page.scss
+++ b/src/app/pages/singup/singup.page.scss
@@ -17,3 +17,27 @@ ion-button {
   justify-self: center;
   top: 12%;
 }
+
+.icon {
+  top: 0;
+  position: absolute;
+  left: 0;
+  width: 3em;
+  height: 3em;
+}
+
+ion-title {
+  position: absolute;
+  left: 15%;
+  top: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+.avatar{
+  top: 0;
+  position: absolute;
+  right: 0;
+  width: 3em;
+  height: 3em;
+}
