arreglo estetico del header

--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -1,13 +1,12 @@
 .icon {
-  top: 0;
+  top:-0.25em;
   position: absolute;
-  left: 0;
+  left: 0.15em;
   width: 3em;
   height: 3em;
 }
 
 ion-title {
-  margin-left: 2em;
   align-items: center;
   justify-content: center;
 }
