--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
-    <ion-title>Detalles del producto</ion-title>
+    <ion-title mode="ios">Detalles del producto</ion-title>
     <div class="fallback">
       <ion-icon slot="icon-only" name="person-outline" class="avatar" routerLink="/profile"></ion-icon>
     </div>
@@ -17,9 +17,9 @@
     <ion-text id="description">{{ productoHijo?.description }}</ion-text>
   </ion-card>
 
-  <ion-button routerLink="/favoritos" expand="full" >
-    <ion-icon  name="heart-outline"></ion-icon>
-    <ion-icon name="heart-outline" color="danger"></ion-icon>
+  <ion-button expand="full" >
+    <ion-icon  name="heart-outline" ”></ion-icon>
+    <ion-icon color="danger" name="heart-outline"></ion-icon>
   </ion-button>
 
 
