--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,8 +1,8 @@
 
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
-    <ion-title>Tu perfil</ion-title>
+    <img mode="ios" routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
+    <ion-title mode="ios">Tu perfil</ion-title>
     <div class="fallback">
       <ion-icon slot="icon-only" name="person-outline" class="avatar" routerLink="/profile"></ion-icon>
     </div>
