Añadimos pagina de favoritos y servicio sqlite

--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -11,9 +11,9 @@
 <ion-content>
   <ion-card>
     <img src="{{productoHijo?.img}}">
-    <ion-card-header>{{ productoHijo?.name }}</ion-card-header>
-    <ion-text id="price">{{ productoHijo?.price }}€</ion-text><br>
-    <ion-text id="description">{{ productoHijo?.description }}</ion-text>
+    <ion-card-header class="product-text"><strong>{{ productoHijo?.name }}</strong></ion-card-header>
+    <ion-text id="description" class="product-text">{{ productoHijo?.description }}</ion-text><br>
+    <ion-text id="price" class="product-text">{{ productoHijo?.price }}€</ion-text><br>
   </ion-card>
-
+  <ion-button type="button" shape="round" color="tertiary"><ion-icon slot="icon-only" name="heart-outline"></ion-icon></ion-button>
 </ion-content>
