--- a/src/app/pages/profile/profile.page.scss
+++ b/src/app/pages/profile/profile.page.scss
@@ -20,6 +20,13 @@ ion-title {
   height: 3em;
 }
 
+.star{
+  top: 0;
+  position: absolute;
+  right: 3em;
+  width: 3em;
+  height: 3em;
+}
 
 ion-avatar {
   width: 6em;
