--- a/src/app/pages/singup/singup.page.scss
+++ b/src/app/pages/singup/singup.page.scss
@@ -27,9 +27,7 @@ ion-button {
 }
 
 ion-title {
-  position: absolute;
-  left: 15%;
-  top: 0;
+  margin-left: 2em;
   align-items: center;
   justify-content: center;
 }
@@ -38,6 +36,14 @@ ion-title {
   top: 0;
   position: absolute;
   right: 0;
+  width: 3em;
+  height: 3em;
+}
+
+.star{
+  top: 0;
+  position: absolute;
+  right: 3em;
   width: 3em;
   height: 3em;
 }
