--- a/src/app/pages/product-details/product-details.page.html
+++ b/src/app/pages/product-details/product-details.page.html
@@ -1,7 +1,10 @@
 <ion-header>
   <ion-toolbar>
     <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
-    <ion-title>Detalles del producto</ion-title>
+    <ion-title>Favoritos</ion-title>
+    <div class="fallback">
+      <ion-icon slot="icon-only" name="star-outline" class="star" routerLink="/favoritos"></ion-icon>
+    </div>
     <div class="fallback">
       <ion-icon slot="icon-only" name="person-outline" class="avatar" routerLink="/profile"></ion-icon>
     </div>
@@ -15,5 +18,8 @@
     <ion-text id="description" class="product-text">{{ productoHijo?.description }}</ion-text><br>
     <ion-text id="price" class="product-text">{{ productoHijo?.price }}€</ion-text><br>
   </ion-card>
-  <ion-button type="button" shape="round" color="tertiary"><ion-icon slot="icon-only" name="heart-outline"></ion-icon></ion-button>
+  <ion-button type="button" shape="round" color="tertiary" (click)="addProduct(productoHijo.name, productoHijo.img, productoHijo.description, productoHijo.price)">
+    <ion-icon class="heart-icon" slot="icon-only" name="heart-outline" *ngIf="!isFavorite"></ion-icon>
+    <ion-icon class="heart-icon" slot="icon-only" name="heart" *ngIf="isFavorite"></ion-icon>
+  </ion-button>
 </ion-content>
