--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -20,6 +20,14 @@ ion-title {
   height: 3em;
 }
 
+.star{
+  top: 0;
+  position: absolute;
+  right: 3em;
+  width: 3em;
+  height: 3em;
+}
+
 .product-text{
   color: #fff;
   font-weight: bold;
