--- a/src/app/pages/productos/productos.page.scss
+++ b/src/app/pages/productos/productos.page.scss
@@ -20,6 +20,14 @@ ion-title {
   height: 3em;
 }
 
+.star{
+  top: 0;
+  position: absolute;
+  right: 3em;
+  width: 3em;
+  height: 3em;
+}
+
 ion-card{
   width: 100%;
   height: 120px;
