--- a/src/app/pages/profile/profile.page.html
+++ b/src/app/pages/profile/profile.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
-    <ion-title>Favoritos</ion-title>
+    <ion-title>Tu Perfil</ion-title>
     <div class="fallback">
       <ion-icon slot="icon-only" name="star-outline" class="star" routerLink="/favoritos"></ion-icon>
     </div>
@@ -14,7 +14,7 @@
 <ion-content [fullscreen]="true">
   <ion-buttons>
     <ion-button class="logoutIcon" (click)="logout()">
-      <ion-icon slot="icon-only" name="log-out" routerLink="/"></ion-icon>
+      <ion-icon slot="icon-only" name="log-out"></ion-icon>
     </ion-button>
   </ion-buttons>
   <div class="preview">
