--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -27,6 +27,10 @@ ion-title {
   height: 3em;
 }
 
+.heart-icon {
+  transition: 4ms all ease;
+}
+
 .product-text{
   color: #fff;
   font-weight: bold;
