--- a/src/app/pages/productos/productos.page.html
+++ b/src/app/pages/productos/productos.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <img mode="ios" routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
+    <img routerLink="/" class="icon" src="https://firebasestorage.googleapis.com/v0/b/vulthanosangular.appspot.com/o/IMGS%2Fheader%2Flogo.png?alt=media&token=bff5153a-1e6f-4244-a626-db9e66a87da1" alt=""/>
     <ion-title mode="ios">Productos</ion-title>
     <div class="fallback">
       <ion-icon slot="icon-only" name="star-outline" class="star" routerLink="/favoritos"></ion-icon>
